--- a/ticketBooking/edit.html
+++ b/ticketBooking/edit.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ticket Booking</title>
 </head>
 <body>
     <p>It's a ticket booking app </p>
     <h1>Editing {{.Title}}</h1>
 
     <form action="/save/{{.Title}}" method="POST">
+    <div><textarea name="title" >{{printf "%s" .Title}}</textarea></div>
     <div><textarea name="body" rows="20" cols="80">{{printf "%s" .Body}}</textarea></div>
     <div><input type="submit" value="Save"></div>
     </form>
